@@ -10,6 +10,7 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.oauth2.core.user.DefaultOAuth2User;
+import org.springframework.security.oauth2.client.authentication.OAuth2AuthenticationToken;
 import org.springframework.security.web.authentication.SimpleUrlAuthenticationSuccessHandler;
 import org.springframework.stereotype.Component;
 
@@ -30,15 +31,13 @@ public class OAuth2LoginSuccessHandler extends SimpleUrlAuthenticationSuccessHan
 
         log.info("OAuth2 login success for user: {}", authentication.getName());
 
-        // Extension vs 웹 대시보드 요청 구분
-        String userAgent = request.getHeader("User-Agent");
-        String referer = request.getHeader("Referer");
+        // registrationId 기반으로 Extension vs 웹 대시보드 요청 구분
+        OAuth2AuthenticationToken oauth2Token = (OAuth2AuthenticationToken) authentication;
+        String registrationId = oauth2Token.getAuthorizedClientRegistrationId();
+        boolean isExtensionRequest = "google-extension".equals(registrationId);
 
-        // Extension에서 온 요청인지 확인
-        boolean isExtensionRequest = referer != null && referer.contains("chrome-extension://");
-
-        log.info("OAuth2 요청 구분 - Extension: {}, UserAgent: {}, Referer: {}",
-                isExtensionRequest, userAgent, referer);
+        log.info("OAuth2 요청 구분 - RegistrationId: {}, Extension: {}",
+                registrationId, isExtensionRequest);
 
         try {
             // Authentication에서 사용자 정보 추출
@@ -62,40 +61,11 @@ public class OAuth2LoginSuccessHandler extends SimpleUrlAuthenticationSuccessHan
             log.info("RefreshToken cookie set for user: {}", googleSub);
             
             if (isExtensionRequest) {
-                // Extension 요청: Content Script로 메시지 전달하는 HTML 응답
-                response.setContentType("text/html;charset=UTF-8");
-                response.getWriter().write("""
-                    <!DOCTYPE html>
-                    <html>
-                    <head>
-                        <title>Extension OAuth2 Success</title>
-                    </head>
-                    <body>
-                        <script>
-                            // Extension Content Script로 메시지 전달
-                            window.addEventListener('load', function() {
-                                // Chrome Extension으로 메시지 전달
-                                if (typeof chrome !== 'undefined' && chrome.runtime) {
-                                    chrome.runtime.sendMessage({
-                                        type: 'OAUTH2_SUCCESS',
-                                        accessToken: '%s',
-                                        refreshToken: '%s'
-                                    });
-                                }
-                                // 페이지 표시 후 일정 시간 대기
-                                setTimeout(function() {
-                                    window.close();
-                                }, 2000);
-                            });
-                        </script>
-                        <div style="text-align: center; padding: 50px; font-family: Arial, sans-serif;">
-                            <h2>🎉 로그인 성공!</h2>
-                            <p>Extension으로 정보를 전달하고 있습니다...</p>
-                            <p>이 창은 곧 자동으로 닫힙니다.</p>
-                        </div>
-                    </body>
-                    </html>
-                    """.formatted(accessToken, refreshToken));
+                // Extension 요청: URL Fragment로 토큰 전달
+                String redirectUrl = String.format("https://%s.chromiumapp.org/?success=true&access_token=%s&refresh_token=%s",
+                        "hfacdgjgkmaebgmmbfancbaeofhfijda", accessToken, refreshToken);
+
+                response.sendRedirect(redirectUrl);
             } else {
                 // 웹 대시보드 요청: 기존 방식
                 response.setContentType("text/html;charset=UTF-8");
